@@ -4,7 +4,7 @@ or that doing so is even a good idea. It just means that I _might_ get
 around to it some time. If you have any good ideas, please let me know.
 
 * login/sulogin/passwd/getty/etc are part of tinylogin, and so are not
-    needed or wanted in busybox (or else I'd have to link in libcrypt).
+    needed or wanted in busybox (or else I'd have to link to libcrypt).
 
 * Networking apps are probably going to be split out some time soon into a
     separate package (named perhaps tiny-netkit?).  This currently includes 
